feat: request waste point
